# youtube_srapping_with_python

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml  requirements.txt  scrapper.py  setup.cfg
mescrap/: __main__.py
mescrap.egg-info/: PKG-INFO  SOURCES.txt
mescrap/scrappy/: scrapper.py
mescrapper/: test.py
mescrappy/: __main__.py  test.py
mescrappy.egg-info/: PKG-INFO  SOURCES.txt
scrapper/: __main__.py  test.py
scrapper/scrapper/: scrapper.py
