[metadata]
name = mescrap
version = 0.0.1
author = Merdan Chariyarov
author_email = merdanchariyarov@gmail.com
description = python selenium youtube scrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MerlinEmris/youtube_srapping_with_python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True